google maps - make bower install

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -27,11 +27,7 @@
   </form>
 </div>-->
 
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>Gupi</h1>
-  </div>
-</header>
+
 
 <div class="container">
   <div class="row">
@@ -40,8 +36,10 @@
     </div>
   </div>
 
+  <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+
   <div google-chart chart="chartObject" style="height:600px; width:100%;"></div>
-  
+
 </div>
 
 
