--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -34,12 +34,17 @@
     </div>
   </div>
 
+  <div google-chart chart="chartObject" style="height:600px; width:100%;"></div>
+
   <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="false" options="options" bounds="map.bounds">
     <ui-gmap-polygon static="true" ng-repeat="p in polygons track by p.id" path="p.path" stroke="p.stroke" visible="p.visible"
-                     geodesic="p.geodesic" fill="p.fill" fit="false" editable="p.editable"></ui-gmap-polygon>
+                     geodesic="p.geodesic" fill="p.fill" fit="false" editable="p.editable" clickable="p.clickable"></ui-gmap-polygon>
+    <ui-gmap-marker idkey="marker.id" coords="marker.coords" options="marker.options" click="onClick()" events="marker.events" >
+      <ui-gmap-window options="windowOptions" closeClick="closeClick()">
+        <div>{{title}}</div>
+      </ui-gmap-window>
+    </ui-gmap-marker>
   </ui-gmap-google-map>
-
-  <div google-chart chart="chartObject" style="height:600px; width:100%;"></div>
 
 </div>
 
