--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -27,24 +27,42 @@
   </form>
 </div>-->
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-
-    </div>
+<div class="container" style="margin-left: 0px; width: 1380px;">
+<div class="row">
+  <div class="col-md-2">
+    <uib-tabset active="activePill" vertical="true" type="pills">
+      <uib-tab index="0" heading="Map" ng-click="mapSelect()"></uib-tab>
+      <uib-tab index="1" heading="Graph" ng-click="graphSelect()"></uib-tab>
+      <uib-tab index="2" heading="Aulas VI"></uib-tab>
+      <uib-tab index="3" heading="Aulas V"></uib-tab>
+      <uib-tab index="4" heading="Medicina"></uib-tab>
+      <uib-tab index="5" heading="Visitantes"></uib-tab>
+      <uib-tab index="6" heading="Cafeteria"></uib-tab>
+      <uib-tab index="7" heading="Zona Azul"></uib-tab>
+      <uib-tab index="8" heading="Zona Amarilla"></uib-tab>
+      <uib-tab index="9" heading="Zona Roja"></uib-tab>
+      <uib-tab index="10" heading="Zona Verde"></uib-tab>
+      <uib-tab index="11" heading="Zona Morada"></uib-tab>
+      <uib-tab index="12" heading="Graph"></uib-tab>"></uib-tab>
+    </uib-tabset>
   </div>
+  <div class="col-md-10">
+    <ui-gmap-google-map ng-show="mapShow" center="map.center" zoom="map.zoom" draggable="false" options="options" bounds="map.bounds">
+      <ui-gmap-polygon static="true" ng-repeat="p in polygons track by p.id" path="p.path" stroke="p.stroke" visible="p.visible"
+                       geodesic="p.geodesic" fill="p.fill" fit="false" editable="p.editable" clickable="p.clickable"></ui-gmap-polygon>
+      <!--<ui-gmap-marker idkey="marker.id" coords="marker.coords" options="marker.options" click="onClick()" events="marker.events" >
+        <ui-gmap-window options="windowOptions" closeClick="closeClick()">
+          <div>{{title}}</div>
+        </ui-gmap-window>
+      </ui-gmap-marker>-->
+    </ui-gmap-google-map>
+    <div ng-show="chartShow">
+      <div google-chart  chart="chartObject" style="height:500px; width:100%;"></div>
+    </div>
 
-  <div google-chart chart="chartObject" style="height:600px; width:100%;"></div>
+  </div>
+</div>
 
-  <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="false" options="options" bounds="map.bounds">
-    <ui-gmap-polygon static="true" ng-repeat="p in polygons track by p.id" path="p.path" stroke="p.stroke" visible="p.visible"
-                     geodesic="p.geodesic" fill="p.fill" fit="false" editable="p.editable" clickable="p.clickable"></ui-gmap-polygon>
-    <ui-gmap-marker idkey="marker.id" coords="marker.coords" options="marker.options" click="onClick()" events="marker.events" >
-      <ui-gmap-window options="windowOptions" closeClick="closeClick()">
-        <div>{{title}}</div>
-      </ui-gmap-window>
-    </ui-gmap-marker>
-  </ui-gmap-google-map>
 
 </div>
 
