--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -49,6 +49,12 @@
       <uib-tab index="3" heading="Zone 2" ng-click="zona2()"></uib-tab>
       <uib-tab index="4" heading="Zone 3" ng-click="zona3()"></uib-tab>
       <uib-tab index="5" heading="Zone 4" ng-click="zona4()"></uib-tab>
+      <uib-tab index="2" heading="Zone 5" ng-click="zona1()"></uib-tab>
+      <uib-tab index="3" heading="Zone 6" ng-click="zona2()"></uib-tab>
+      <uib-tab index="4" heading="Zone 7" ng-click="zona3()"></uib-tab>
+      <uib-tab index="5" heading="Zone 8" ng-click="zona4()"></uib-tab>
+      <uib-tab index="2" heading="Zone 9" ng-click="zona1()"></uib-tab>
+      <uib-tab index="3" heading="Zone 10" ng-click="zona2()"></uib-tab>
 
 
 
@@ -59,7 +65,7 @@
     <ui-gmap-google-map ng-if="mapShow" center="map.center" zoom="map.zoom" draggable="false" options="options" bounds="map.bounds" control="map.control">
       <ui-gmap-polygons models="polygons" dorebuildall="true"
                         path="'path'" stroke="'stroke'" geodesic="'geodesic'" static="'true'" fill="'fill'"
-                        fit="false" draggable="'draggable'" events="'events'">></ui-gmap-polygons>
+                        fit="false" events="'events'">></ui-gmap-polygons>
       <ui-gmap-window show="polywindow.show" coords="polywindow.coords">
         <h> <b>{{titles}}</b> {{position}} {{position2}} </h>
       </ui-gmap-window>
