--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -33,28 +33,16 @@
     <uib-tabset active="activePill" vertical="true" type="pills">
       <uib-tab index="0" heading="Map" ng-click="mapSelect()"></uib-tab>
       <uib-tab index="1" heading="Graph" ng-click="graphSelect()"></uib-tab>
-
-      <!--<uib-tab index="2" heading="Aulas VI"></uib-tab>
-      <uib-tab index="3" heading="Aulas V"></uib-tab>
-      <uib-tab index="4" heading="Medicina"></uib-tab>
-      <uib-tab index="5" heading="Visitantes"></uib-tab>
-      <uib-tab index="6" heading="Cafeteria"></uib-tab>
-      <uib-tab index="7" heading="Zona Azul"></uib-tab>
-      <uib-tab index="8" heading="Zona Amarilla"></uib-tab>
-      <uib-tab index="9" heading="Zona Roja"></uib-tab>
-      <uib-tab index="10" heading="Zona Verde"></uib-tab>
-      <uib-tab index="11" heading="Zona Morada"></uib-tab>
-      <uib-tab index="12" heading="Graph"></uib-tab>"></uib-tab>-->
-      <uib-tab index="2" heading="Zone 1" ng-click="zona1()"></uib-tab>
-      <uib-tab index="3" heading="Zone 2" ng-click="zona2()"></uib-tab>
-      <uib-tab index="4" heading="Zone 3" ng-click="zona3()"></uib-tab>
-      <uib-tab index="5" heading="Zone 4" ng-click="zona4()"></uib-tab>
-      <uib-tab index="2" heading="Zone 5" ng-click="zona1()"></uib-tab>
-      <uib-tab index="3" heading="Zone 6" ng-click="zona2()"></uib-tab>
-      <uib-tab index="4" heading="Zone 7" ng-click="zona3()"></uib-tab>
-      <uib-tab index="5" heading="Zone 8" ng-click="zona4()"></uib-tab>
-      <uib-tab index="2" heading="Zone 9" ng-click="zona1()"></uib-tab>
-      <uib-tab index="3" heading="Zone 10" ng-click="zona2()"></uib-tab>
+      <uib-tab index="2" heading="Zone 1 / Aulas VI" ng-click="zona1()"></uib-tab>
+      <uib-tab index="3" heading="Zone 2 / Aulas V" ng-click="zona2()"></uib-tab>
+      <uib-tab index="4" heading="Zone 3 / Medicina" ng-click="zona3()"></uib-tab>
+      <uib-tab index="5" heading="Zone 4 / Visitantes" ng-click="zona4()"></uib-tab>
+      <uib-tab index="2" heading="Zone 5 / Cafeteria" ng-click="zona5()"></uib-tab>
+      <uib-tab index="3" heading="Zone 6 / Zona Azul" ng-click="zona6()"></uib-tab>
+      <uib-tab index="4" heading="Zone 7 / Zona Amarilla" ng-click="zona7()"></uib-tab>
+      <uib-tab index="5" heading="Zone 8 / Zona Roja" ng-click="zona8()"></uib-tab>
+      <uib-tab index="2" heading="Zone 9 / Zona Verde" ng-click="zona9()"></uib-tab>
+      <uib-tab index="3" heading="Zone 10 / Zona Morada" ng-click="zona10()"></uib-tab>
 
 
 
@@ -86,6 +74,27 @@
     <div ng-if="pieGraph4">
       <div google-chart  chart="pie4" style="height:500px; width:100%;"></div>
     </div>
+
+    <div ng-if="pieGraph5">
+      <div google-chart  chart="pie5" style="height:500px; width:100%;"></div>
+    </div>
+    <div ng-if="pieGraph6">
+      <div google-chart  chart="pie6" style="height:500px; width:100%;"></div>
+    </div>
+    <div ng-if="pieGraph7">
+      <div google-chart  chart="pie7" style="height:500px; width:100%;"></div>
+    </div>
+    <div ng-if="pieGraph8">
+      <div google-chart  chart="pie8" style="height:500px; width:100%;"></div>
+    </div>
+
+    <div ng-if="pieGraph9">
+      <div google-chart  chart="pie9" style="height:500px; width:100%;"></div>
+    </div>
+    <div ng-if="pieGraph10">
+      <div google-chart  chart="pie10" style="height:500px; width:100%;"></div>
+    </div>
+
 
   </div>
 </div>
