change graphs to new database

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -33,16 +33,16 @@
     <uib-tabset active="activePill" vertical="true" type="pills">
       <uib-tab index="0" heading="Map" ng-click="mapSelect()"></uib-tab>
       <uib-tab index="1" heading="Graph" ng-click="graphSelect()"></uib-tab>
-      <uib-tab index="2" heading="Zone 1 / Aulas VI" ng-click="zona1()"></uib-tab>
-      <uib-tab index="3" heading="Zone 2 / Aulas V" ng-click="zona2()"></uib-tab>
-      <uib-tab index="4" heading="Zone 3 / Medicina" ng-click="zona3()"></uib-tab>
-      <uib-tab index="5" heading="Zone 4 / Visitantes" ng-click="zona4()"></uib-tab>
-      <uib-tab index="2" heading="Zone 5 / Cafeteria" ng-click="zona5()"></uib-tab>
-      <uib-tab index="3" heading="Zone 6 / Zona Azul" ng-click="zona6()"></uib-tab>
-      <uib-tab index="4" heading="Zone 7 / Zona Amarilla" ng-click="zona7()"></uib-tab>
-      <uib-tab index="5" heading="Zone 8 / Zona Roja" ng-click="zona8()"></uib-tab>
-      <uib-tab index="2" heading="Zone 9 / Zona Verde" ng-click="zona9()"></uib-tab>
-      <uib-tab index="3" heading="Zone 10 / Zona Morada" ng-click="zona10()"></uib-tab>
+      <uib-tab index="2" heading="Aulas VI" ng-click="zona1()"></uib-tab>
+      <uib-tab index="3" heading="Aulas V" ng-click="zona2()"></uib-tab>
+      <uib-tab index="4" heading="Medicina" ng-click="zona3()"></uib-tab>
+      <uib-tab index="5" heading="Visitantes" ng-click="zona4()"></uib-tab>
+      <uib-tab index="2" heading="Cafeteria" ng-click="zona5()"></uib-tab>
+      <uib-tab index="3" heading="Zona Azul" ng-click="zona6()"></uib-tab>
+      <uib-tab index="4" heading="Zona Amarilla" ng-click="zona7()"></uib-tab>
+      <uib-tab index="5" heading="Zona Roja" ng-click="zona8()"></uib-tab>
+      <uib-tab index="2" heading="Zona Verde" ng-click="zona9()"></uib-tab>
+      <uib-tab index="3" heading="Zona Morada" ng-click="zona10()"></uib-tab>
 
 
 
